crates/cribo/tests/snapshots/ruff_lint_results@side_effect_preservation.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/side_effect_preservation/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [],
    total_violations: 0,
}
