crates/cribo/tests/snapshots/ruff_lint_results@simple_project.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/simple_project/main.py
---
RuffLintResults {
    f401_violations: [
        "Line 7: unused-import - `os` imported but unused",
        "Line 8: unused-import - `sys` imported but unused",
    ],
    f404_violations: [],
    other_violations: [],
    total_violations: 2,
}
