crates/cribo/tests/snapshots/ruff_lint_results@simple_treeshaking_inlining.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/simple_treeshaking_inlining/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [
        "Line 5: unused-import - `abc.ABC` imported but unused",
    ],
    total_violations: 1,
}
