crates/cribo/tests/snapshots/ruff_lint_results@stdlib_module_conflicts_package_entry.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_module_conflicts_package_entry/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [],
    total_violations: 0,
}
